# python-project-template

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: config.yaml
docs/: README.md
python_project_template/utils/: __init__.py  downloader.py  logger.py
scripts/helpers/: download_checkpoints.py
